Enhanced text fragment shader + visual fix after test on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ body
 {
     display: flex;
     align-items: center;
-    height: 100vh;
+    height: 100dvh;
     position: relative;
     font-family: 'Cabin', sans-serif;
     color: #ffeded;
